Structuration en HTML

--- a/index.html
+++ b/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
+		<meta charset="utf-8"/>
 		<title>Reservia</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<h1>Reservia</h1>
+
+	<!--Header-->
+			<header>
+
+			</header>
+
+	<!--Section Search-->
+			<section id="search">
+
+			</section>
+	<!--Section Accomandation-->
+			<section id="accomandation">
+
+			</section>
+
+	<!--Section Popular-->
+			<section id="popular">
+
+			</section>
+
+	<!--Section Activity-->
+			<section id="activity">
+
+			</section>
+
+	<!--Footer-->
+			<footer>
+
+			</footer>
+
 	</body>
 </html>
