Ajout logo et nav

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 
 	<!--Header-->
 			<header>
-
+				<img src="images/logo/Reservia@3x.png" alt="Logo Reservia">
+				<nav class="menu">
+					<ul>
+						<li><a href="Hébergements">Hébergements</a></li>
+						<li><a href="Activités">Activités</a> </a></li>
+						<li><a href="s'inscrire">S'inscrire</a></li>
+					</ul>
+				</nav>
 			</header>
 
 	<!--Section Search-->
