Insertion div class logoHeader

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 	</head>
 	<body>
 
-	<!--Header-->
+<!-- 					---	Header ---									-->
 			<header>
-				<img src="images/logo/Reservia@3x.png" alt="Logo Reservia">
+				<div class="logoHeader">
+					<img src="images/logo/Reservia@3x.png" alt="Logo Reservia">
+				</div>
 				<nav class="menu">
 					<ul>
 						<li><a href="Hébergements">Hébergements</a></li>
@@ -19,26 +21,32 @@
 				</nav>
 			</header>
 
-	<!--Section Search-->
+<!--				---	Section Search	---								-->
 			<section id="search">
 
 			</section>
-	<!--Section Accomandation-->
+	
+<!--					--- Section principal ----						-->
+		<main>
+
+<!--					--- Section Accomandation ---					-->
 			<section id="accomandation">
 
 			</section>
 
-	<!--Section Popular-->
+<!--					--- Section Popular ---							-->
 			<section id="popular">
 
 			</section>
 
-	<!--Section Activity-->
+<!--					--- Section Activity ---						-->
 			<section id="activity">
 
 			</section>
 
-	<!--Footer-->
+		</main>
+
+<!--						--- Footer ---								-->
 			<footer>
 
 			</footer>
