Ajout style police

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<div class="logoHeader">
 					<img src="images/logo/Reservia@3x.png" alt="Logo Reservia">
 				</div>
-				<nav class="menu">
+				<nav class="menuHeader">
 					<ul>
 						<li><a href="Hébergements">Hébergements</a></li>
 						<li><a href="Activités">Activités</a> </a></li>
@@ -27,7 +27,7 @@
 			</section>
 	
 <!--					--- Section principal ----						-->
-		<main>
+		<main class="principal">
 
 <!--					--- Section Accomandation ---					-->
 			<section id="accomandation">
