--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 <!-- 					---	Header ---									-->
 			<header>
-				<div class="logoHeader">
+				<div id="logoHeader">
 					<img src="images/logo/Reservia@3x.png" alt="Logo Reservia">
 				</div>
 				<nav class="menuHeader">
 					<ul>
-						<li><a href="Hébergements">Hébergements</a></li>
-						<li><a href="Activités">Activités</a> </a></li>
-						<li><a href="s'inscrire">S'inscrire</a></li>
+						<li><a class="NavHéber" href="Hébergements">Hébergements</a></li>
+						<li><a class="NavActi" href="Activités">Activités</a> </a></li>
+						<li><a class="NavSin" href="s'inscrire">S'inscrire</a></li>
 					</ul>
 				</nav>
 			</header>
