--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Reservia</title>
+		<script src="https://kit.fontawesome.com/0e52baed40.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 
 <!-- 					---	Header ---									-->
 			<header>
-				<div id="logoHeader">
+					<div class="logoheader">
 					<img src="images/logo/Reservia@3x.png" alt="Logo Reservia">
-				</div>
-				<nav class="menuHeader">
+					</div>
+				<nav class="menuheader">
 					<ul>
 						<li><a class="NavHéber" href="Hébergements">Hébergements</a></li>
 						<li><a class="NavActi" href="Activités">Activités</a> </a></li>
@@ -22,8 +23,26 @@
 			</header>
 
 <!--				---	Section Search	---								-->
-			<section id="search">
+				<section id="search">
+				<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+				<p>En pleins centre ville ou en pleine nature</p>
+				<div class="formsearch">
+					<form method="search" action="traitement.php">
+						<i class="fas fa-map-marker-alt"></i>
+						<input type="text" name="ville" placeholder="Marseille, France">
+						<button>Rechercher</button>					
+					</form>
+				</div>
 
+				<h3>Filtres</H3>
+				<div class="flitresearch">
+					<i class="fas fa-money-bill-wave"></i><stan>Economique</stan>
+					<i class="fas fa-child"></i><stan>Familial</stan>
+					<i class="fas fa-heart"></i><stan>Romantique</stan>
+					<i class="fas fa-dog"></i><stan>Animaux autorisés</stan>
+		
+				</div>
+				<i class="fas fa-info-circle"></i>Plus de 500 logements sont disponibles dans cette ville</br>
 			</section>
 	
 <!--					--- Section principal ----						-->
