Ajout code couleur début fond filtre

--- a/index.html
+++ b/index.html
@@ -34,15 +34,17 @@
 					</form>
 				</div>
 
+				<div class="filtre">
 				<h3>Filtres</H3>
-				<div class="flitresearch">
-					<i class="fas fa-money-bill-wave"></i><stan>Economique</stan>
-					<i class="fas fa-child"></i><stan>Familial</stan>
-					<i class="fas fa-heart"></i><stan>Romantique</stan>
-					<i class="fas fa-dog"></i><stan>Animaux autorisés</stan>
-		
+					<div class="flitresearch">
+						<i class="fas fa-money-bill-wave"></i><stan class="diffiltre">Economique</stan>
+						<i class="fas fa-child"></i><stan class="diffiltre">Familial</stan>
+						<i class="fas fa-heart"></i><stan class="diffiltre">Romantique</stan>
+						<i class="fas fa-dog"></i><stan class="diffiltre">Animaux autorisés</stan>
+					</div>
 				</div>
 				<i class="fas fa-info-circle"></i>Plus de 500 logements sont disponibles dans cette ville</br>
+				
 			</section>
 	
 <!--					--- Section principal ----						-->
