--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<nav class="menuheader">
 					<ul>
 						<li><a class="NavHéber" href="Hébergements">Hébergements</a></li>
-						<li><a class="NavActi" href="Activités">Activités</a> </a></li>
+						<li><a class="NavActi" href="Activités">Activités</a></li>
 						<li><a class="NavSin" href="s'inscrire">S'inscrire</a></li>
 					</ul>
 				</nav>
@@ -27,7 +27,7 @@
 				<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
 				<p>En pleins centre ville ou en pleine nature</p>
 				<div class="formsearch">
-					<form method="search" action="traitement.php">
+					<form method="post" action="traitement.php">
 						<i class="fas fa-map-marker-alt"></i>
 						<input type="text" name="ville" placeholder="Marseille, France">
 						<button>Rechercher</button>					
@@ -37,13 +37,13 @@
 				<div class="filtre">
 				<h3>Filtres</H3>
 					<div class="flitresearch">
-						<i class="fas fa-money-bill-wave"></i><stan class="diffiltre">Economique</stan>
-						<i class="fas fa-child"></i><stan class="diffiltre">Familial</stan>
-						<i class="fas fa-heart"></i><stan class="diffiltre">Romantique</stan>
-						<i class="fas fa-dog"></i><stan class="diffiltre">Animaux autorisés</stan>
+						<i class="fas fa-money-bill-wave"></i><span>Economique</span>
+						<i class="fas fa-child"></i><span>Familial</span>
+						<i class="fas fa-heart"></i><span>Romantique</span>
+						<i class="fas fa-dog"></i><span>Animaux autorisés</span>
 					</div>
 				</div>
-				<i class="fas fa-info-circle"></i>Plus de 500 logements sont disponibles dans cette ville</br>
+				<i class="fas fa-info-circle"></i>Plus de 500 logements sont disponibles dans cette ville<br/>
 				
 			</section>
 	
