Ajout section principale

--- a/index.html
+++ b/index.html
@@ -8,66 +8,65 @@
 	</head>
 	<body>
 
-<!-- 					---	Header ---									-->
+<!-- 					###	Header ###									-->
 			<header>
 					<div class="logoheader">
-					<img src="images/logo/Reservia@3x.png" alt="Logo Reservia">
+					<img class="logo" src="images/logo/Reservia@3x.png" alt="Logo Reservia">
 					</div>
 				<nav class="menuheader">
 					<ul>
 						<li><a class="NavHéber" href="Hébergements">Hébergements</a></li>
 						<li><a class="NavActi" href="Activités">Activités</a></li>
-						<li><a class="NavSin" href="s'inscrire">S'inscrire</a></li>
 					</ul>
+					<a class="sinscrire" href="s'inscrire">S'inscrire</a>
 				</nav>
 			</header>
 
-<!--				---	Section Search	---								-->
+<!--					###	Section Search	###								-->
 				<section id="search">
 				<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
 				<p>En pleins centre ville ou en pleine nature</p>
 				<div class="formsearch">
 					<form method="post" action="traitement.php">
-						<i class="fas fa-map-marker-alt"></i>
-						<input type="text" name="ville" placeholder="Marseille, France">
+						<i class="fas fa-map-marker-alt logoloca"></i>
+						<input class="localiser" type="text" name="rechercheville" placeholder="Marseille, France"/>
 						<button>Rechercher</button>					
 					</form>
 				</div>
 
-				<div class="filtre">
-				<h3>Filtres</H3>
-					<div class="flitresearch">
-						<i class="fas fa-money-bill-wave"></i><span>Economique</span>
-						<i class="fas fa-child"></i><span>Familial</span>
-						<i class="fas fa-heart"></i><span>Romantique</span>
-						<i class="fas fa-dog"></i><span>Animaux autorisés</span>
+				<div class="filtres">
+				<h4>Filtres</h4>
+					<div class="filtresearch">
+						<div><i class="fas fa-money-bill-wave rond_bleu"></i><span class="filtre">Economique</span></div>
+						<div><i class="fas fa-child rond_bleu"></i><span class="filtre">Familial</span></div>
+						<div><i class="fas fa-heart rond_bleu"></i><span class="filtre">Romantique</span></div>
+						<div><i class="fas fa-dog rond_bleu"></i><span class="filtre">Animaux autorisés</span></div>
 					</div>
 				</div>
-				<i class="fas fa-info-circle"></i>Plus de 500 logements sont disponibles dans cette ville<br/>
+				<div class="infosup"><p class="cercle"><i class="fas fa-info Iinfo"></i></p><p class="lgtdispo">Plus de 500 logements sont disponibles dans cette ville</p></div>
 				
 			</section>
 	
-<!--					--- Section principal ----						-->
-		<main class="principal">
+<!--					### Section principal ###						-->
+		<div class="principal">
 
-<!--					--- Section Accomandation ---					-->
-			<section id="accomandation">
+<!--					### Section Accomandation ###					-->
+			<article>
+				<h2 class="hebergement">Hébergements à Marseille</h2>
 
-			</section>
+<!--					### Section Popular ###							-->
+			<aside>
+				<h2 class="populaire">Les plus polulaires</h2>
+			</aside>
 
-<!--					--- Section Popular ---							-->
-			<section id="popular">
-
-			</section>
-
-<!--					--- Section Activity ---						-->
+<!--					### Section Activity ###						-->
 			<section id="activity">
 
 			</section>
 
-		</main>
+		</div>
 
-<!--						--- Footer ---								-->
+<!--						### Footer ###								-->
 			<footer>
 
 			</footer>
