Ajout Hébergement + populaire

--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
 			<article>
 				<h2 class="hebergement">Hébergements à Marseille</h2>
 
-<!--					### Section Popular ###							-->
+				<div class="casehotel"><p class="rectphoto"><a href="#"><img class="photochambre" src="images/hebergements/small/auberge.jpg" alt="Auberge de la Cannebiere"/></a></p>
+				<p class="nomhotel"><a href="#">Auberge la Cannebière</a></p>
+				<p class="tarif"><a href="#">Nuit à partir de <span class="prix">25€</span></a></p>
+				<p class="noteetoileheb"><a href="#"><i class="fas fa-star etoilebleu"></i><i class="fas fa-star etoilebleu"></i><i class="fas fa-star etoilebleu"></i><i class="fas fa-staretoilebleu"></i><i class="fas fa-star etoilegrise"></i></a></p>
+				</div>
+				
+				</article>
+					<!--					### Section Popular ###							-->
 			<aside>
 				<h2 class="populaire">Les plus polulaires</h2>
 			</aside>
