Mise en place du responsive sur le header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Reservia</title>
 		<script src="https://kit.fontawesome.com/0e52baed40.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body>
 
@@ -13,13 +14,13 @@
 					<div class="logoheader">
 					<img class="logo" src="images/logo/Reservia@3x.png" alt="Logo Reservia">
 					</div>
-				<nav class="menuheader">
+				<nav class="choix">
 					<ul>
-						<li><a class="NavHéber" href="Hébergements">Hébergements</a></li>
-						<li><a class="NavActi" href="Activités">Activités</a></li>
+						<li><a class="Navheb" href="Hébergements">Hébergements</a></li>
+						<li><a class="Navacti" href="Activités">Activités</a></li>
 					</ul>
-					<a class="sinscrire" href="s'inscrire">S'inscrire</a>
 				</nav>
+				<a class="sinscrire" href="s'inscrire">S'inscrire</a>
 			</header>
 
 <!--					###	Section Search	###								-->
