Vérifaction w3c validatior "RAS"

--- a/index.html
+++ b/index.html
@@ -26,17 +26,19 @@
 <!--					###	Section Search	###								-->
 				<section id="search">
 				<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-				<p>En pleins centre ville ou en pleine nature</p>
+				<p>En plein centre ville ou en pleine nature</p>
 				<div class="formsearch">
 					<form method="post" action="traitement.php">
 						<i class="fas fa-map-marker-alt logoloca"></i>
 						<input class="localiser" type="text" name="rechercheville" placeholder="Marseille, France"/>
-						<button>Rechercher</button>					
+						<button class="rechercher">Rechercher</button>
+						<button class="recherloupe"><i class="fas fa-search loupe"></i></button>
+						
 					</form>
 				</div>
 
 				<div class="filtres">
-				<h4>Filtres</h4>
+					<h4>Filtres</h4>
 					<div class="filtresearch">
 						<div><i class="fas fa-money-bill-wave rond_bleu"></i><span class="filtre">Economique</span></div>
 						<div><i class="fas fa-child rond_bleu"></i><span class="filtre">Familial</span></div>
