--- a/index.html
+++ b/index.html
@@ -57,16 +57,118 @@
 			<article>
 				<h2 class="hebergement">Hébergements à Marseille</h2>
 
-				<div class="casehotel"><p class="rectphoto"><a href="#"><img class="photochambre" src="images/hebergements/small/auberge.jpg" alt="Auberge de la Cannebiere"/></a></p>
-				<p class="nomhotel"><a href="#">Auberge la Cannebière</a></p>
-				<p class="tarif"><a href="#">Nuit à partir de <span class="prix">25€</span></a></p>
-				<p class="noteetoileheb"><a href="#"><i class="fas fa-star etoilebleu"></i><i class="fas fa-star etoilebleu"></i><i class="fas fa-star etoilebleu"></i><i class="fas fa-staretoilebleu"></i><i class="fas fa-star etoilegrise"></i></a></p>
+				<div class="casehotel">
+					<p class="rectphoto"><a href="#"><img class="photochambre" src="images/hebergements/small/auberge.jpg" alt="Auberge de la Cannebiere"/></a></p>
+					<p class="nomhotel"><a href="#" class="nomH">Auberge la Cannebière</a></p>
+					<p class="tarif"><a href="#" class="nuità">Nuit à partir de <span class="prix">25€</span></a></p>
+					<p class="noteetoileheb"><a href="#">
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>						
+							<i class="fas fa-star etoilegrise"></i></a></p>
+				</div>
+
+				<div class="casehotel">
+					<p class="rectphoto"><a href="#"><img class="photochambre" src="images/hebergements/small/hduport.jpg" alt="Hôtel du port"/></a></p>
+					<p class="nomhotel"><a href="#" class="nomH">Hôtel du port</a></p>
+					<p class="tarif"><a href="#" class="nuità">Nuit à partir de 52<span class="prix">€</span></a></p>
+					<p class="noteetoileheb"><a href="#">
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>						
+						<i class="fas fa-star etoilebleu"></i></a></p>
+				</div>
+
+				<div class="casehotel">
+					<p class="rectphoto"><a href="#"><img class="photochambre" src="images/hebergements/small/mouettes.jpg" alt="Hôtel les mouettes"/></a></p>
+					<p class="nomhotel"><a href="#" class="nomH">Hôtel les mouettes</a></p>
+					<p class="tarif"><a href="#" class="nuità">Nuit à partir de 76<span class="prix">€</span></a></p>
+					<p class="noteetoileheb"><a href="#">
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>						
+							<i class="fas fa-star etoilegrise"></i></a></p>
+				</div>
+
+				<div class="casehotel">
+					<p class="rectphoto"><a href="#"><img class="photochambre" src="images/hebergements/small/mer.jpg" alt="Hôtel de la mer"/></a></p>
+					<p class="nomhotel"><a href="#" class="nomH">Hôtel de la mer</a></p>
+					<p class="tarif"><a href="#" class="nuità">Nuit à partir de 46<span class="prix">€</span></a></p>
+					<p class="noteetoileheb"><a href="#">
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+							<i class="fas fa-star etoilegrise"></i>						
+							<i class="fas fa-star etoilegrise"></i></a></p>
+				</div>
+
+				<div class="casehotel">
+					<p class="rectphoto"><a href="#"><img class="photochambre" src="images/hebergements/small/panier.jpg" alt="Auberge Le Panier"/></a></p>
+					<p class="nomhotel"><a href="#" class="nomH">Auberge Le Panier</a></p>
+					<p class="tarif"><a href="#" class="nuità">Nuit à partir de <span class="prix">23€</span></a></p>
+					<p class="noteetoileheb"><a href="#">
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>						
+							<i class="fas fa-star etoilegrise"></i></a></p>
+				</div>
+
+				<div class="casehotel">
+					<p class="rectphoto"><a href="#"><img class="photochambre" src="images/hebergements/small/amina.jpg" alt="Hôtel chez Amina"/></a></p>
+					<p class="nomhotel"><a href="#" class="nomH">Hôtel chez Amina</a></p>
+					<p class="tarif"><a href="#" class="nuità">Nuit à partir de 96<span class="prix">€</span></a></p>
+					<p class="noteetoileheb"><a href="#">
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>						
+						<i class="fas fa-star etoilebleu"></i></a></p>
 				</div>
 				
 				</article>
 					<!--					### Section Popular ###							-->
+			
 			<aside>
 				<h2 class="populaire">Les plus polulaires</h2>
+				<div class="casehotel">
+					<p class="rectphoto"><a href="#"><img class="photochambre" src="images/hebergements/small/soleilmatin.jpg" alt="Hôtel Le soleil du matin"/></a></p>
+					<p class="nomhotel"><a href="#" class="nomH">Hôtel Le soleil du matin</a></p>
+					<p class="tarif"><a href="#" class="nuità">Nuit à partir de 128<span class="prix">€</span></a></p>
+					<p class="noteetoileheb"><a href="#">
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i></a></p>
+				</div>
+
+				<div class="casehotel">
+					<p class="rectphoto"><a href="#"><img class="photochambre" src="images/hebergements/small/coeur.jpg" alt="Au coeur de l'eau Chambre d'hôtes"/></a></p>
+					<p class="nomhotel"><a href="#" class="nomH">Au coeur de l'eau Chambre d'hôtes</a></p>
+					<p class="tarif"><a href="#" class="nuità">Nuit à partir de 71<span class="prix">€</span></a></p>
+					<p class="noteetoileheb"><a href="#">
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+							<i class="fas fa-star etoilegrise"></i></a></p>
+				</div>
+
+				<div class="casehotel">
+					<p class="rectphoto"><a href="#"><img class="photochambre" src="images/hebergements/small/toutbleu.jpg" alt="Hôtel Tout bleu et Blanc"/></a></p>
+					<p class="nomhotel"><a href="#" class="nomH">Hôtel Tout bleu et Blanc</a></p>
+					<p class="tarif"><a href="#" class="nuità">Nuit à partir de 68<span class="prix">€</span></a></p>
+					<p class="noteetoileheb"><a href="#">
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+						<i class="fas fa-star etoilebleu"></i>
+							<i class="fas fa-star etoilegrise"></i></a></p>
+				</div>
 			</aside>
 
 <!--					### Section Activity ###						-->
