--- a/index.html
+++ b/index.html
@@ -128,46 +128,54 @@
 						<i class="fas fa-star etoilebleu"></i>						
 						<i class="fas fa-star etoilebleu"></i></a></p>
 				</div>
+
+				<p class="afficherplus">Afficher plus</p>
 				
 				</article>
 					<!--					### Section Popular ###							-->
 			
 			<aside>
-				<h2 class="populaire">Les plus polulaires</h2>
+				<div class="titrepopu"><h2 class="populaire">Les plus polulaires</h2><i class="fas fa-chart-line fleche"></i></div>
 				<div class="casehotel">
 					<p class="rectphoto"><a href="#"><img class="photochambre" src="images/hebergements/small/soleilmatin.jpg" alt="Hôtel Le soleil du matin"/></a></p>
-					<p class="nomhotel"><a href="#" class="nomH">Hôtel Le soleil du matin</a></p>
-					<p class="tarif"><a href="#" class="nuità">Nuit à partir de 128<span class="prix">€</span></a></p>
-					<p class="noteetoileheb"><a href="#">
-						<i class="fas fa-star etoilebleu"></i>
-						<i class="fas fa-star etoilebleu"></i>
-						<i class="fas fa-star etoilebleu"></i>
-						<i class="fas fa-star etoilebleu"></i>
-						<i class="fas fa-star etoilebleu"></i></a></p>
+					<div class="écrit">
+						<p class="nomhotel"><a href="#" class="nomH">Hôtel Le soleil du matin</a></p>
+						<p class="tarif"><a href="#" class="nuità">Nuit à partir de 128<span class="prix">€</span></a></p>
+						<p class="noteetoilepopu"><a href="#">
+							<i class="fas fa-star etoilebleu"></i>
+							<i class="fas fa-star etoilebleu"></i>
+							<i class="fas fa-star etoilebleu"></i>
+							<i class="fas fa-star etoilebleu"></i>
+							<i class="fas fa-star etoilebleu"></i></a></p>
+					</div>
 				</div>
 
 				<div class="casehotel">
 					<p class="rectphoto"><a href="#"><img class="photochambre" src="images/hebergements/small/coeur.jpg" alt="Au coeur de l'eau Chambre d'hôtes"/></a></p>
-					<p class="nomhotel"><a href="#" class="nomH">Au coeur de l'eau Chambre d'hôtes</a></p>
-					<p class="tarif"><a href="#" class="nuità">Nuit à partir de 71<span class="prix">€</span></a></p>
-					<p class="noteetoileheb"><a href="#">
-						<i class="fas fa-star etoilebleu"></i>
-						<i class="fas fa-star etoilebleu"></i>
-						<i class="fas fa-star etoilebleu"></i>
-						<i class="fas fa-star etoilebleu"></i>
-							<i class="fas fa-star etoilegrise"></i></a></p>
+					<div class="écrit">	
+						<p class="nomhotel"><a href="#" class="nomH">Au coeur de l'eau Chambre d'hôtes</a></p>
+						<p class="tarif"><a href="#" class="nuità">Nuit à partir de 71<span class="prix">€</span></a></p>
+						<p class="noteetoilepopu"><a href="#">
+							<i class="fas fa-star etoilebleu"></i>
+							<i class="fas fa-star etoilebleu"></i>
+							<i class="fas fa-star etoilebleu"></i>
+							<i class="fas fa-star etoilebleu"></i>
+								<i class="fas fa-star etoilegrise"></i></a></p>
+					</div>
 				</div>
 
 				<div class="casehotel">
 					<p class="rectphoto"><a href="#"><img class="photochambre" src="images/hebergements/small/toutbleu.jpg" alt="Hôtel Tout bleu et Blanc"/></a></p>
-					<p class="nomhotel"><a href="#" class="nomH">Hôtel Tout bleu et Blanc</a></p>
-					<p class="tarif"><a href="#" class="nuità">Nuit à partir de 68<span class="prix">€</span></a></p>
-					<p class="noteetoileheb"><a href="#">
-						<i class="fas fa-star etoilebleu"></i>
-						<i class="fas fa-star etoilebleu"></i>
-						<i class="fas fa-star etoilebleu"></i>
-						<i class="fas fa-star etoilebleu"></i>
-							<i class="fas fa-star etoilegrise"></i></a></p>
+					<div class="écrit">
+						<p class="nomhotel"><a href="#" class="nomH">Hôtel Tout bleu et Blanc</a></p>
+						<p class="tarif"><a href="#" class="nuità">Nuit à partir de 68<span class="prix">€</span></a></p>
+						<p class="noteetoilepopu"><a href="#">
+							<i class="fas fa-star etoilebleu"></i>
+							<i class="fas fa-star etoilebleu"></i>
+							<i class="fas fa-star etoilebleu"></i>
+							<i class="fas fa-star etoilebleu"></i>
+								<i class="fas fa-star etoilegrise"></i></a></p>
+					</div>
 				</div>
 			</aside>
 
