responsive les plus populaire

--- a/index.html
+++ b/index.html
@@ -16,34 +16,35 @@
 					</div>
 				<nav class="choix">
 					<ul>
-						<li><a class="Navheb" href="Hébergements">Hébergements</a></li>
-						<li><a class="Navacti" href="Activités">Activités</a></li>
+						<li><a class="navheb" href="Hébergements">Hébergements</a></li>
+						<li><a class="navacti" href="Activités">Activités</a></li>
 					</ul>
 				</nav>
 				<a class="sinscrire" href="s'inscrire">S'inscrire</a>
 			</header>
 
 <!--					###	Section Search	###								-->
-				<section id="search">
+			<section id="search">
+			<div class="searchecrit">
 				<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
 				<p>En plein centre ville ou en pleine nature</p>
+			</div>			
 				<div class="formsearch">
 					<form method="post" action="traitement.php">
 						<i class="fas fa-map-marker-alt logoloca"></i>
 						<input class="localiser" type="text" name="rechercheville" placeholder="Marseille, France"/>
 						<button class="rechercher">Rechercher</button>
 						<button class="recherloupe"><i class="fas fa-search loupe"></i></button>
-						
 					</form>
 				</div>
 
 				<div class="filtres">
 					<h4>Filtres</h4>
 					<div class="filtresearch">
-						<div><i class="fas fa-money-bill-wave rond_bleu"></i><span class="filtre">Economique</span></div>
-						<div><i class="fas fa-child rond_bleu"></i><span class="filtre">Familial</span></div>
-						<div><i class="fas fa-heart rond_bleu"></i><span class="filtre">Romantique</span></div>
-						<div><i class="fas fa-dog rond_bleu"></i><span class="filtre">Animaux autorisés</span></div>
+						<div class="money"><i class="fas fa-money-bill-wave rond_bleu"></i><span class="filtre">Economique</span></div>
+						<div class="famille"><i class="fas fa-child rond_bleu"></i><span class="filtre">Familial</span></div>
+						<div class="romantique"><i class="fas fa-heart rond_bleu"></i><span class="filtre">Romantique</span></div>
+						<div class="animaux"><i class="fas fa-dog rond_bleu"></i><span class="filtre">Animaux autorisés</span></div>
 					</div>
 				</div>
 				<div class="infosup"><p class="cercle"><i class="fas fa-info Iinfo"></i></p><p class="lgtdispo">Plus de 500 logements sont disponibles dans cette ville</p></div>
