correctif mise en place

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					<div class="écrit">
 						<p class="nomhotel"><a href="#" class="nomH">Hôtel Le soleil du matin</a></p>
 						<p class="tarif"><a href="#" class="nuità">Nuit à partir de 128<span class="prix">€</span></a></p>
-						<p class="noteetoilepopu"><a href="#">
+						<p class="noteetoilepopu1"><a href="#">
 							<i class="fas fa-star etoilebleu"></i>
 							<i class="fas fa-star etoilebleu"></i>
 							<i class="fas fa-star etoilebleu"></i>
@@ -170,7 +170,7 @@
 					<div class="écrit">
 						<p class="nomhotel"><a href="#" class="nomH">Hôtel Tout bleu et Blanc</a></p>
 						<p class="tarif"><a href="#" class="nuità">Nuit à partir de 68<span class="prix">€</span></a></p>
-						<p class="noteetoilepopu"><a href="#">
+						<p class="noteetoilepopu1"><a href="#">
 							<i class="fas fa-star etoilebleu"></i>
 							<i class="fas fa-star etoilebleu"></i>
 							<i class="fas fa-star etoilebleu"></i>
