modification nom photo

--- a/index.html
+++ b/index.html
@@ -182,6 +182,12 @@
 
 <!--					### Section Activity ###						-->
 			<section id="activity">
+				<h3>Activités à Marseille</h3>
+				<div class="activites">
+					<div class="vieuxport">
+						<p class="cadrephoto"><img class="vue" src="images/activites/vieuxport.jpg" alt="Vieux Port"/></p>						
+					</div>
+				</div>
 
 			</section>
 
