Ajout du footer

--- a/index.html
+++ b/index.html
@@ -186,29 +186,29 @@
 				<h2>Activités à Marseille</h2>
 				<div class="activites">
 					<div class="entier">
-						<p class="cadrelong"><a href="#" class="nomAct"><img class="vuelong" src="images/activites/4_small/vieuxport.jpg" alt="Vieux Port"/></a></p>
-						<p class="nomlieu"><a href="#" class="nomAct">Vieux Port</a></p>						
+						<p class="cadrelong"><a href="#"><img class="vuelong" src="images/activites/4_small/vieuxport.jpg" alt="Vieux Port"/></a></p>
+						<p class="nomlieu"><a href="#">Vieux Port</a></p>						
 					</div>
 					<div class="demi">
 						<div class="moyencadre">
-							<p class="fort"><a href="#" class="nomAct"><img class="grosimg" src="images/activites/4_small/pomegues.jpg" alt="Fort de Pomègues"/></a></p>
-							<p class="nomlieu"><a href="#" class="nomAct">Fort de Pomègues</a></p></div>							
+							<p class="fort"><a href="#"><img class="grosimg" src="images/activites/4_small/pomegues.jpg" alt="Fort de Pomègues"/></a></p>
+							<p class="nomlieu"><a href="#">Fort de Pomègues</a></p></div>							
 						<div class="petitcadre">
-							<p class="frioul"><a href="#" class="nomAct"><img class="petitimg" src="images/activites/4_small/frioul.jpg" alt="Iles du Frioul"/></a></p>
-							<p class="nomlieu"><a href="#" class="nomAct">Iles du Frioul</a></p></div>
+							<p class="frioul"><a href="#"><img class="petitimg" src="images/activites/4_small/frioul.jpg" alt="Iles du Frioul"/></a></p>
+							<p class="nomlieu"><a href="#">Iles du Frioul</a></p></div>
 					</div>
 					<div class="entier">
-						<p class="cadrelong"><a href="#" class="nomAct"><img class="vuelong" src="images/activites/4_small/calanques.jpg" alt="Parc National des Calanques"/></p>
-						<p class="nomlieu"><a href="#" class="nomAct">Parc National des Calanques</a></p>												
+						<p class="cadrelong"><a href="#"><img class="vuelong" src="images/activites/4_small/calanques.jpg" alt="Parc National des Calanques"/></p>
+						<p class="nomlieu"><a href="#">Parc National des Calanques</a></p>												
 					</div>
 					<div class="demi">
 						<div class="moitie">
-							<p class="demicadre"><a href="#" class="nomAct"><img class="demiimg" src="images/activites/4_small/notredame.jpg" alt="Notre-Dame-de-la-Garde"/></a></p>
-							<p class="nomlieu"><a href="#" class="nomAct">Notre-Dame-de-la-Garde</a></p>
+							<p class="demicadre"><a href="#"><img class="demiimg" src="images/activites/4_small/notredame.jpg" alt="Notre-Dame-de-la-Garde"/></a></p>
+							<p class="nomlieu"><a href="#">Notre-Dame-de-la-Garde</a></p>
 						</div>
 						<div class="moitie">
-							<p class="demicadre"><a href="#" class="nomAct"><img class="demiimg" src="images/activites/4_small/longchamp.jpg" alt="Parc Longchamp"/></a></p>
-							<p class="nomlieu"><a href="#" class="nomAct">Parc Longchamp</a></p>
+							<p class="demicadre"><a href="#"><img class="demiimg" src="images/activites/4_small/longchamp.jpg" alt="Parc Longchamp"/></a></p>
+							<p class="nomlieu"><a href="#">Parc Longchamp</a></p>
 						</div>
 					</div>
 				</div>
@@ -218,9 +218,31 @@
 		</div>
 
 <!--						### Footer ###								-->
-			<footer>
+		<footer>
+			<div class="apropos">
+				<h5>A propos</h5>
+				<ul>
+					<li>Fonctionnement du site</li>
+					<li>Conditions générale de vente</li>
+					<li>Données et confidentialité</li>						
+				</ul>
+			</div>
+			<div class="nosheber">
+				<h5>Nos hébergements</h5>
+				<ul>
+					<li>Charte qualité</li>
+					<li>Soumettre votre hôtel</li>
+				</ul>
+			</div>
+			<div class="Assist">
+				<h5>Assisantance</h5>
+				<ul>
+					<li>Centre d'aide</li>
+					<li>Nous contacter</li>
+				</ul>
+			</div>
 
-			</footer>
+		</footer>
 
 	</body>
 </html>
