--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<p>En plein centre ville ou en pleine nature</p>
 			</div>			
 				<div class="formsearch">
-					<form method="dialog" action="#">
+					<form method="search" action="#">
 						<i class="fas fa-map-marker-alt logoloca"></i>
 						<input class="localiser" type="text" name="rechercheville" placeholder="Marseille, France"/>
 						<button class="rechercher">Rechercher</button>
@@ -198,7 +198,7 @@
 							<p class="nomlieu"><a href="#">Iles du Frioul</a></p></div>
 					</div>
 					<div class="entier">
-						<p class="cadrelong"><a href="#"><img class="vuelong" src="images/activites/4_small/calanques.jpg" alt="Parc National des Calanques"/></p>
+						<p class="cadrelong"><a href="#"><img class="vuelong" src="images/activites/4_small/calanques.jpg" alt="Parc National des Calanques"/></a></p>
 						<p class="nomlieu"><a href="#">Parc National des Calanques</a></p>												
 					</div>
 					<div class="demi">
@@ -214,8 +214,6 @@
 				</div>
 
 			</section>
-
-		</div>
 
 <!--						### Footer ###								-->
 		<footer>
