--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 					</div>
 				<nav class="choix">
 					<ul>
-						<li><a class="navheb" href="hebergement">Hébergements</a></li>
-						<li><a class="navacti" href="activity">Activités</a></li>
+						<li><a href="#heberg">Hébergements</a></li>
+						<li><a href="#activ">Activités</a></li>
 					</ul>
 				</nav>
 				<a class="sinscrire" href="s'inscrire">S'inscrire</a>
 			</header>
 
 <!--					###	Section Search	###								-->
-			<section id="search">
+			<section class="search">
 			<div class="searchecrit">
 				<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
 				<p>En plein centre ville ou en pleine nature</p>
@@ -56,7 +56,7 @@
 
 <!--					### Section Accomandation ###					-->
 			<article>
-				<h2 class="hebergement">Hébergements à Marseille</h2>
+				<h2 class="hebergement" id="heberg">Hébergements à Marseille</h2>
 
 				<div class="casehotel">
 					<p class="rectphoto"><a href="#"><img class="photochambre" src="images/hebergements/small/auberge.jpg" alt="Auberge de la Cannebiere"/></a></p>
@@ -183,7 +183,7 @@
 
 <!--					### Section Activity ###						-->
 			<section class="activity">
-				<h2>Activités à Marseille</h2>
+				<h2 id="activ">Activités à Marseille</h2>
 				<div class="activites">
 					<div class="entier">
 						<p class="cadrelong"><a href="#"><img class="vuelong" src="images/activites/4_small/vieuxport.jpg" alt="Vieux Port"/></a></p>
