--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<p>En plein centre ville ou en pleine nature</p>
 			</div>			
 				<div class="formsearch">
-					<form method="dialog" action="#">
+					<form method="POST" action="#">
 						<i class="fas fa-map-marker-alt logoloca"></i>
 						<input class="localiser" type="text" name="rechercheville" placeholder="Marseille, France"/>
 						<button class="rechercher">Rechercher</button>
