--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body>
-
+		<div class="contenant">
 <!-- 					###	Header ###									-->
 			<header>
 					<div class="logoheader">
@@ -212,8 +212,9 @@
 						</div>
 					</div>
 				</div>
-
+				
 			</section>
+		</div>
 
 <!--						### Footer ###								-->
 		<footer>
